# Polyzip

./: CMakeLists.txt  README.md
.github/workflows/: codeql.yml
include/: errors.h  hashtable.h  huffman.h  lzw.h  node.h  rle.h  tree.h  utils.h
src/: errors.c  hashtable.c  huffman.c  lzw.c  main.c  node.c  rle.c  tree.c  utils.c
tests/: rle_test.c  utils_test.c
tests/samples/rle/: test.rle  test.txt
